feat: add enpoint to get all transactions
